Implement Issues and Comments for Translations

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,3 +54,4 @@
 @import "partials/translation_workbench";
 @import "partials/worker_status";
 @import "partials/highlighter";
+@import "partials/issues";
