Better commit status page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -46,6 +46,7 @@
 @import "partials/multi_field";
 @import "partials/modal";
 @import "partials/navbar";
+@import "partials/sidebar";
 @import "partials/tooltip";
 @import "partials/translation_workbench";
 @import "partials/worker_status";
