--- a/app/views/projects/_form.slim
+++ b/app/views/projects/_form.slim
@@ -20,7 +20,7 @@
         .control-group 
           = f.label :name, class: 'control-label'
           .controls
-            = f.text_field :name, title: 'Test test test'
+            = f.text_field :name
 
         .control-group
           = f.label :repository_url, class: 'control-label'
