--- a/app/views/commits/show.slim
+++ b/app/views/commits/show.slim
@@ -1,5 +1,5 @@
 - content_for :shuttle_title do
-  = "Commit #{@commit.revision[0, 6]} - Shuttle"
+  = "Commit #{@commit.revision_prefix} - Shuttle"
 - content_for :file_name do
   = 'views/commits/show'
 - content_for :class do
@@ -9,119 +9,34 @@
 - content_for :footer do
   true
 
-.header
-  - if current_user.monitor?
-    .pull-right
-      button.default.square href='#settings' rel='modal': i.fa.fa-cogs
-      - if @format and @commit.ready?
-        button.primary href=manifest_project_commit_url(@project, @commit, @format) Download #{@format}
-      - elsif @commit.ready?
-        button.primary.disabled.tooltip-parent[
-          data-tooltip='#missing_format_tooltip'
-          data-tooltip-show='mouseover'
-          data-tooltip-hide='mouseout'
-          data-tooltip-position-at='bottom middle'
-          data-tooltip-position-my='top middle'
-        ]
-          | Missing Format
-        .tooltip#missing_format_tooltip
-          | You must enable at least one cached format to use this feature
-      - else
-        button.primary.disabled Translating
-  h1
-    | #{@commit.project.name}
-    strong &nbsp;>&nbsp;
-    | Commit #{@commit.revision[0, 6]}
+= render layout: 'commits/layout' do
+  .nine.columns.sidebar-main
+    = form_for @commit, url: project_commit_url(@project, @commit) do |f|
+      fieldset
+        legend General Settings
 
-  h6
-    strong
-      - if @commit.loading?
-        - current_status = "Loading with #{pluralize(@commit.list_workers.count, 'Job')}"
-      - else
-        - current_status = (@commit.ready? ? 'Ready' : 'Translating')
-      = "Currently #{current_status}"
-      span.separator &nbsp;/&nbsp;
-      = "Found #{@commit.keys.count} Keys"
-      span.separator &nbsp;/&nbsp;
-      - if @commit.completed_at
-        = "First Completed #{time_ago_in_words(@commit.completed_at)} ago"
-      - elsif @commit.loaded_at
-        = "First Loaded #{time_ago_in_words(@commit.loaded_at)} ago"
-      - else
-        = "First Created #{time_ago_in_words(@commit.created_at)} ago"
-
-hr.divider
-
-.border
-  .filter-bar#filter
-    = form_tag(nil, method: 'GET', id: 'filter-form', class: 'filter') do
-      = text_field_tag 'filter', '', placeholder: 'Filter by Key', id: 'filter-field'
-      = select_tag 'status', options_for_select(\
-          [\
-            ['all', nil],\
-            ['approved', 'approved'],\
-            ['pending', 'pending']\
-          ]\
-        ), id: 'filter-select'
-      = submit_tag 'Filter', class: 'primary'
-
-    = form_for @commit, url: project_commit_url(@commit.project, @commit, format: 'json') do |f|
-      = f.check_box :exported
-      | Commit has been exported
-
-  table.table.table-striped#translations[
-      data-url=project_commit_keys_url(@project, @commit, format: 'json') 
-      data-locales=@project.targeted_rfc5646_locales.keys.join(',') ]
-    thead
-      tr
-        th STRING
-        - @project.locale_requirements.each do |locale, required|
-          - finished = @commit.all_translations_approved_for_locale?(locale)
-          th class=(required ? (finished ? 'text-success' : 'text-error') : nil)
-            = locale.rfc5646
-            - if finished
-              | &nbsp;
-              i.fa.fa-check-circle
-            - else
-              | &nbsp;
-              i.fa.fa-circle-o
-              - if required
-                | &nbsp;&nbsp;-&nbsp;&nbsp;#{(@commit.fraction_done(locale) * 100).round(2)}%
-
-
-/ Settings Modal
-.row
-  .modal.eight.columns#settings
-    a.close ×
-    h2 Commit Tools
-    .modal-body
-      .control-group
-        label.description-label
-          | Use this if you need to manually reimport a commit
-        .controls
-          = button_to 'Reimport', redo_project_commit_path(@project, @commit)
-      - if current_user.admin? and @commit.loading?
         .control-group
-          label.description-label
-            | Use this to clear workers for hanging commits
+          = f.label :due_date, class: 'control-label'
           .controls
-            = button_to 'Clear Workers', clear_project_commit_url(@project, @commit)
+            = f.text_field  :due_date, \
+                            value: (f.object.due_date.strftime('%m/%d/%Y') if !f.object.due_date.nil?),\
+                            class: 'datepicker'
 
-      .control-group
-        label.description-label
-          | Use this if all translations are done but commit is still red
-        .controls
-          = button_to 'Recalculate', recalculate_project_commit_path(@project, @commit)
+        .control-group
+          = f.label :pull_request_url, class: 'control-label'
+          .controls
+            = f.text_field :pull_request_url
 
-      .control-group
-        label.description-label
-          | Use this if the Stash build status is not updating
-        .controls
-          = button_to 'Ping Stash', ping_stash_project_commit_path(@project, @commit)
+        .control-group
+          = f.label :description, class: 'control-label'
+          .controls
+            = f.text_area :description, rows: 7
 
-      .control-group
-        label.description-label
-          | Delete this commit
-        .controls
-          button.danger href=project_commit_url(@project, @commit) data-method='DELETE' data-confirm='Are you sure you want to delete this commit?' Delete
+        .control-group
+          .controls
+            = f.check_box :exported
+            | This commit has been exported
 
+        .control-group.wide-label.form-action
+          .controls
+            = f.submit class: 'primary', value: 'Update', name: nil
