--- a/app/views/locale/projects/show.slim
+++ b/app/views/locale/projects/show.slim
@@ -48,7 +48,7 @@
         | Last imported 
         = "#{time_ago_in_words(commit.committed_at)} ago"
         |  / 
-        = "#{commit.revision[0, 6]}"
+        = "#{commit.revision_prefix}"
       - else 
         | Never imported before
 
@@ -63,7 +63,7 @@ hr.divider
       = select_tag 'commit' , options_for_select(\
                                                 @project.commits\
                                                   .order('committed_at DESC')\
-                                                  .map {|c| ["#{c.revision[0, 6]}: #{truncate c.message}", c.id]}\
+                                                  .map {|c| ["#{c.revision_prefix}: #{truncate c.message}", c.id]}\
                                                   .unshift(['all commits', nil])\
                                                 , preselected_commit.try!(:id))
       = select_tag 'filter_source', options_for_select( [\
