--- a/app/views/translations/edit.slim
+++ b/app/views/translations/edit.slim
@@ -25,7 +25,11 @@
 
 / Status Line
 .header
-  h1 Translation #{@translation.id}
+  h1
+    | #{@translation.key.project.name}
+    strong &nbsp;>&nbsp;
+    | Translation #{@translation.id}
+
 
 hr.divider
 
