--- a/app/views/stats/index.slim
+++ b/app/views/stats/index.slim
@@ -58,4 +58,5 @@ table.table.stats-table
 
 .row
   .sixteen.columns
+    strong Words Created/Translated Last Week
     svg#translation_language_chart
