--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,9 +11,12 @@
  *= require reset
  *
  *= require jquery-qtip
+ *= require jquery-gallery
+ *= require jquery-swipebox
  *= require font-awesome
  *= require nvd3
  *= require css3-mixins
+ *= require dropzone/basic
  *
  *= require_self
  *= require_tree ./pages
