--- a/app/views/commit_mailer/notify_submitter_of_import_errors.text.erb
+++ b/app/views/commit_mailer/notify_submitter_of_import_errors.text.erb
@@ -1,4 +1,4 @@
-The following errors occured while we were importing your commit <%= @commit.revision[0,6] %> on <%= @commit.project.name %> into Shuttle:
+The following errors occured while we were importing your commit <%= @commit.revision_prefix %> on <%= @commit.project.name %> into Shuttle:
 
 SHA: <%= @commit.revision %>
 Link: <%= project_commit_url(@commit.project, @commit) %>
