--- a/app/views/commits/_layout.slim
+++ b/app/views/commits/_layout.slim
@@ -1,3 +1,16 @@
+/ Copyright 2014 Square Inc.
+/
+/    Licensed under the Apache License, Version 2.0 (the "License");
+/    you may not use this file except in compliance with the License.
+/    You may obtain a copy of the License at
+/
+/        http://www.apache.org/licenses/LICENSE-2.0
+/
+/    Unless required by applicable law or agreed to in writing, software
+/    distributed under the License is distributed on an "AS IS" BASIS,
+/    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+/    See the License for the specific language governing permissions and
+/    limitations under the License.
 
 .header
   - if current_user.monitor?
@@ -46,8 +59,11 @@
       ul
         li class=('active' if action_name == 'show')
           a href=project_commit_path(@project, @commit) Settings
-        li class=('active' if action_name == 'tools')
-          a href=tools_project_commit_path(@project, @commit) Tools
+        - if current_user.monitor?
+          li class=('active' if action_name == 'tools')
+            a href=tools_project_commit_path(@project, @commit) Tools
+        li class=('active' if action_name == 'gallery')
+          a href=gallery_project_commit_path(@project, @commit) Gallery
         li class=('active' if action_name == 'search')
           a href=search_project_commit_path(@project, @commit) Strings
 
@@ -66,4 +82,5 @@
               dd
                 span class=(finished ? 'finished' : 'inprogress') style="width: #{(@commit.fraction_done(locale) * 100).round(2)}%;"
 
-    = yield
+    .thirteen.columns.sidebar-main
+      = yield
