--- a/app/views/locale/projects/show.slim
+++ b/app/views/locale/projects/show.slim
@@ -21,34 +21,28 @@
   = [controller_name, action_name].join('-')
 - content_for :footer do
   true
-- @mode = params[:mode] || case current_user.role\
-                            when 'translator' then 'translation'\
-                            else 'review'\
-                          end
 
 / Status Line
 .header
   .pull-right.locale-select
-    - if current_user.role == "admin"
-      input.locale-field type="text" placeholder="locale"
+    - if current_user.role == 'admin'
+      = text_field_tag 'locale', nil, id: 'locale-field', class: 'locale-field', placeholder: 'locale'
     - else
-      select
-        - current_user.approved_locales.each do |locale|
-          option value=locale.rfc5646 = locale.name
-    - commit = params[:commit].present? ? @project.commits.for_revision(params[:commit]).first : nil
-    button.submit.translate-link [
-                data-sha=commit.revision
-                data-project=commit.project.to_param
-                ] Translate
-  h1 =@project.name
+      = select_tag 'locale',  options_for_select(\
+                                current_user.approved_locales.map {|l| [l.name, l.rfc5646]},\
+                              ),\
+                              id: 'locale-field'
+    = button_tag 'Translate', id: 'translate-link', class: 'submit', type: 'button'
+  h1 = @project.name
 
   h6
-    strong 
-      - if (commit = @project.commits.order('committed_at DESC').first)
+    strong
+      - last_commit = @project.commits.order('committed_at DESC').first
+      - if last_commit
         | Last imported 
-        = "#{time_ago_in_words(commit.committed_at)} ago"
+        = "#{time_ago_in_words(last_commit.committed_at)} ago"
         |  / 
-        = "#{commit.revision_prefix}"
+        = "#{last_commit.revision_prefix}"
       - else 
         | Never imported before
 
@@ -58,27 +52,37 @@ hr.divider
 .border 
   .filter-bar
     form
-      input type="text" name="filter" placeholder="Substring"
-      - preselected_commit = params[:commit].present? ? @project.commits.for_revision(params[:commit]).first : nil
-      = select_tag 'commit' , options_for_select(\
-                                                @project.commits\
-                                                  .order('committed_at DESC')\
-                                                  .map {|c| ["#{c.revision_prefix}: #{truncate c.message}", c.id]}\
-                                                  .unshift(['all commits', nil])\
-                                                , preselected_commit.try!(:id))
-      = select_tag 'filter_source', options_for_select( [\
-                                                          [@locale.name, 'translated'],\
-                                                          [@project.base_locale.name, 'source']\
-                                                        ])
-      = submit_tag 'Filter', class: 'primary'
-      .checkbox
-        input type="checkbox" name="include_translated" value="true" checked=(@mode == 'review' ? 'checked' : nil)
-        label for="include_translated" Translated
-      .checkbox
-        input type="checkbox" name="include_approved" value="true"
-        label for="include_approved" Approved
-      .checkbox
-        input type="checkbox" name="include_new" value="true" checked=((@mode == 'translation' || @mode == 'review') ? 'checked' : nil)
-        label for="include_new" New
+      .main
+        .pull-right#expand-search
+          i.fa.fa-chevron-right
+
+        input type="text" name="filter" placeholder="Substring"
+        - preselected_commit = @project.commits.for_revision(params[:commit]).first
+        = select_tag 'commit' , options_for_select(\
+                                                  @project.commits\
+                                                    .order('committed_at DESC')\
+                                                    .map {|c| ["#{c.revision_prefix}: #{truncate c.message}", c.revision]}\
+                                                    .unshift(['all commits', nil])\
+                                                  , preselected_commit.try!(:revision))
+        = select_tag 'filter_source', options_for_select( [\
+                                                            ['Source', 'source'],\
+                                                            ['Translation', 'translated']\
+                                                          ])
+        = submit_tag 'Filter', class: 'primary'
+        = button_tag id: 'gallery-link', class: 'primary square', type: 'button' do
+          i.fa.fa-picture-o
+
+
+
+      .collapse
+        .checkbox
+          input type="checkbox" name="include_translated" value="true" checked=(@mode == 'review' ? 'checked' : nil)
+          label for="include_translated" Translated
+        .checkbox
+          input type="checkbox" name="include_approved" value="true"
+          label for="include_approved" Approved
+        .checkbox
+          input type="checkbox" name="include_new" value="true" checked=((@mode == 'translation' || @mode == 'review') ? 'checked' : nil)
+          label for="include_new" New
     
   .translation-workbench
