--- a/app/views/issue_mailer/issue_updated.text.erb
+++ b/app/views/issue_mailer/issue_updated.text.erb
@@ -1,15 +1,17 @@
 <%= @issue.updater.name %> updated an issue on <%= l @issue.updated_at, format: :full %>:
 
 Changes:
+
 <% @issue.changes.each do |field, values| %>
-<%= field %>:
+<% unless @fields_to_skip.include?(field) %>
+<%= field.humanize %>:
     Was: <%= @translatable_fields.include?(field) ? t("models.issue.#{field}")[values.first] : values.first %>
 
     Is: <%= @translatable_fields.include?(field) ? t("models.issue.#{field}")[values.last] : values.last %>
 <% end %>
+<% end %>
 
-<%= link_to 'Click here to view the issue.',
-            project_key_translation_url(@project, @key, @translation) + "#issue-wrapper-#{@issue.id}" %>
+<%= link_to 'Click here to view the issue.', project_key_translation_url(@project, @key, @translation) + "#issue-wrapper-#{@issue.id}" %>
 
 Sincerely,
 The Shuttle Automated Mailer
