--- a/app/views/issue_mailer/issue_created.text.erb
+++ b/app/views/issue_mailer/issue_created.text.erb
@@ -8,7 +8,7 @@ Description: <%= @issue.description %>
 
 Kind: <%= t("models.issue.kind")[@issue.kind] %>
 
-<%= link_to 'Click here to view the issue.', project_key_translation_url(@project, @key, @translation) + "#issue-wrapper-#{@issue.id}" %>
+View the issue: <%= project_key_translation_url(@project, @key, @translation) + "#issue-wrapper-#{@issue.id}" %>
 
 Sincerely,
 The Shuttle Automated Mailer
