--- a/app/views/issue_mailer/issue_updated.text.erb
+++ b/app/views/issue_mailer/issue_updated.text.erb
@@ -8,10 +8,12 @@ Changes:
     Was: <%= @translatable_fields.include?(field) ? t("models.issue.#{field}")[values.first] : values.first %>
 
     Is: <%= @translatable_fields.include?(field) ? t("models.issue.#{field}")[values.last] : values.last %>
+
+
 <% end %>
 <% end %>
 
-<%= link_to 'Click here to view the issue.', project_key_translation_url(@project, @key, @translation) + "#issue-wrapper-#{@issue.id}" %>
+View the issue: <%= project_key_translation_url(@project, @key, @translation) + "#issue-wrapper-#{@issue.id}" %>
 
 Sincerely,
 The Shuttle Automated Mailer
