--- a/app/views/translations/edit.slim
+++ b/app/views/translations/edit.slim
@@ -45,12 +45,13 @@ hr.divider
           = f.text_area :copy, autocomplete: 'off', rows: 15, class: 'resize'
 
         .control-group
-          label.control-label Fuzzy Matches
-          .controls
-            .fuzzy-matches
+          = check_box_tag 'blank_string', '1', (@translation.translated? && @translation.copy.blank? ? 'checked' : nil)
+          | The translation is a blank string
+
+        .control-group
+          .fuzzy-matches
 
       fieldset
-        / TODO: Partial: Will be Issues
         legend Notes
 
         .control-group
