Issue subscriptions implemented

--- a/app/views/issue_mailer/issue_updated.text.erb
+++ b/app/views/issue_mailer/issue_updated.text.erb
@@ -3,7 +3,7 @@
 Changes:
 
 <% @issue.changes.each do |field, values| %>
-<% unless @fields_to_skip.include?(field) %>
+<% unless Issue::SKIPPED_FIELDS_FOR_EMAIL_ON_UPDATE.include?(field) %>
 <%= field.humanize %>:
     Was: <%= @translatable_fields.include?(field) ? t("models.issue.#{field}")[values.first] : values.first %>
 
