Possible fix to erroneous word_count metric

--- a/app/views/stats/index.slim
+++ b/app/views/stats/index.slim
@@ -58,5 +58,5 @@ table.table.stats-table
 
 .row
   .sixteen.columns
-    strong Words Created/Translated Last Week
+    strong English Words Created/Translated Last Week
     svg#translation_language_chart
