Implement issue_url and comment_url helper methods. Simplify issue/comment mailers.

--- a/app/views/comment_mailer/comment_created.text.erb
+++ b/app/views/comment_mailer/comment_created.text.erb
@@ -2,7 +2,7 @@
 
 <%= @comment.content %>
 
-View the comment: <%= project_key_translation_url(@project, @key, @translation) + "#comment-#{@comment.id}" %>
+View the comment: <%= comment_url(@comment) %>
 
 Sincerely,
 The Shuttle Automated Mailer
