--- a/app/views/issue_mailer/issue_updated.text.erb
+++ b/app/views/issue_mailer/issue_updated.text.erb
@@ -13,7 +13,7 @@ Changes:
 <% end %>
 <% end %>
 
-View the issue: <%= project_key_translation_url(@project, @key, @translation) + "#issue-wrapper-#{@issue.id}" %>
+View the issue: <%= issue_url(@issue) %>
 
 Sincerely,
 The Shuttle Automated Mailer
