--- a/app/views/locale/projects/show.slim
+++ b/app/views/locale/projects/show.slim
@@ -71,7 +71,8 @@ hr.divider
         = submit_tag 'Filter', class: 'primary'
         = button_tag id: 'gallery-link', class: 'primary square', type: 'button' do
           i.fa.fa-picture-o
-
+        = button_tag id: 'issues-link', class: 'primary square', type: 'button' do
+          i.fa.fa-comments-o
 
 
       .collapse
