--- a/app/assets/stylesheets/partials/_issues.css.scss
+++ b/app/assets/stylesheets/partials/_issues.css.scss
@@ -1,14 +1,24 @@
 // VARS
-$status-red: #FF0000;
-$status-green: #40C20F;
-$status-blue: #66B2FF;
-$status-yellow: #E4DB00;
+$issue-status-red: #FF0000;
+$issue-status-green: #40C20F;
+$issue-status-blue: #66B2FF;
+$issue-status-yellow: #E4DB00;
 
 .issue-status {
-  &.issue-status-1 { color: $status-red; }
-  &.issue-status-2 { color: $status-yellow; }
-  &.issue-status-3 { color: $status-green; }
-  &.issue-status-4 { color: $status-blue; }
+  &.issue-status-1 { color: $issue-status-red; }
+  &.issue-status-2 { color: $issue-status-yellow; }
+  &.issue-status-3 { color: $issue-status-green; }
+  &.issue-status-4 { color: $issue-status-blue; }
+}
+
+#issue-notifications-on-translations-page-header {
+  display:inline-block;
+  float: right;
+  padding-top:10px;
+
+  .has-pending-issues {
+    color: $issue-status-red;
+  }
 }
 
 #issues {
