--- a/app/assets/stylesheets/pages/translations.scss
+++ b/app/assets/stylesheets/pages/translations.scss
@@ -65,6 +65,10 @@ body.translations {
     background-color: $gray6;
   }
 
+  .edit-side .edit-page-link {
+    float: right;
+  }
+
   .activity {
     margin-top: 30px;
     legend { margin-bottom: -20px };
